# example-boost-tests-and-google-tests-with-cmake

./: CMakeLists.txt  README.md  complete-build
application-example/: CMakeLists.txt  example-app.cpp
boost-tests-example/: CMakeLists.txt  example-test.cpp
gtests-example/: CMakeLists.txt  example-test.cpp
static-lib-example/: CMakeLists.txt  example-lib.cpp  example-lib.h
